Trying to send a pull request
pull request

--- a/h1.html
+++ b/h1.html
@@ -8,5 +8,6 @@
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
   <h1> This is Kausthubh here forking your repository new </h1>
+  <h2> Trying to send pull request</h2>
 </body>
 </html>
